--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <title>QR Code Genrator</title>
   </head>
   <body>
-    <main class="has-text-light block container mt-6 pt-6">
-      <div id="app is-centered mt-1">
-        <h1 class="is-size-1 has-text-centered">⚡ QR Code Mass Genrate ⚡</h1>
-        <div id="Buttons" class="mt-6 is-centered has-text-centered">
-          <input type="file" id="upload-file" class="button is-info mt-3 is-centered" accept=".xls, .xlsx">
-          </input>
-          <br />
-          <button id="upload-btn" class="button has-text-black is-primary mt-3 is-centered ">
-            Genrate Codes ✨
-          </button>
+    <main class="has-text-light block container">
+      <div class="wrapper">
+        <div id="app is-centered mt-1">
+          <h1 class="is-size-1 has-text-centered has-text-weight-bold">⚡ QR Code Batch Genrator ⚡</h1>
+          <div id="Buttons" class=" mt-6 is-centered has-text-centered">
+            <input type="file" id="upload-file" class="button is-info mt-3 is-centered" accept=" .xlsx">
+            </input>
+            <br />
+            <button id="upload-btn" class="button has-text-black is-primary mt-6 is-centered ">
+              Genrate Codes ✨
+            </button>
+          </div>
         </div>
-      </div>
-      <div id="qrs">
+        <div id="qrs">
         
+        </div>
       </div>
     </main>
     <script defer type="module" src="/main.js"></script>
