--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
   <body>
     <main class="has-text-light block container">
       <div class="wrapper">
-        <div id="app is-centered mt-1">
+        <div id="app is-centered has-text-centered mt-1">
           <h1 class="is-size-1 has-text-centered has-text-weight-bold">⚡ QR Code Batch Genrator ⚡</h1>
           <div id="Buttons" class=" mt-6 is-centered has-text-centered">
+            <a href="./howto.html" class="howto has-text-white has-text-weight-bold is-underlined">How to use? 🚀</a> <br />
             <input type="file" id="upload-file" class="button is-info mt-3 is-centered" accept=" .xlsx">
-            </input>
+          </input>
             <br />
             <button id="upload-btn" class="button has-text-black is-primary mt-6 is-centered ">
               Genrate Codes ✨
             </button>
           </div>
         </div>
-        <div id="qrs">
         
-        </div>
       </div>
     </main>
     <script defer type="module" src="/main.js"></script>
